// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Parts: Data renders correctly with all props 1`] = `
.c0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  font-weight: var(--weight-bold);
  color: var(--color-darker);
}

.c0 strong {
  font-size: var(--font-large-size);
  line-height: var(--font-large-lineHeight);
}

.c0 i {
  font-weight: var(--weight-light);
  color: var(--color-dark);
  font-style: normal;
  text-transform: uppercase;
  margin-right: 5px;
  font-size: var(--font-large-size);
  line-height: var(--font-large-lineHeight);
}

<div
  className="c0"
  size="large"
>
  <i>
    usd
  </i>
  <strong>
    23.00
  </strong>
</div>
`;

exports[`Parts: Data renders correctly without any props 1`] = `
.c0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  font-weight: var(--weight-bold);
  color: var(--color-darker);
}

.c0 strong {
  font-size: var(--font-medium-size);
  line-height: var(--font-medium-lineHeight);
}

.c0 i {
  font-weight: var(--weight-light);
  color: var(--color-dark);
  font-style: normal;
  text-transform: uppercase;
  margin-right: 5px;
  font-size: var(--font-normal-size);
  line-height: var(--font-normal-lineHeight);
}

<div
  className="c0"
  size="default"
>
  
  <strong>
    N/A
  </strong>
</div>
`;
